--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,8 +7,9 @@ spring:
     username: jonas
     password: abc1234
     url: "jdbc:postgresql://localhost:5432/techchallange?createDatabaseIfNotExist=false"
+  web:
+    locale: pt_BR
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: update
-
